docs-as-code/mkdocs-on-kubernetes/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs
spec:
  selector:
    app.kubernetes.io/name: docs
  ports:
    - name: http
      port: 80
      targetPort: http
